# infra_control/infra_control/doctype/git_connection/git_connection.py
@@ -1,0 +1,8 @@
+# Copyright (c) 2026, SmartChoice IQ and contributors
+# For license information, please see license.txt
+
+from frappe.model.document import Document
+
+
+class GitConnection(Document):
+	pass
